--- a/VaccineManagementSystem/nbproject/project.properties
+++ b/VaccineManagementSystem/nbproject/project.properties
@@ -53,7 +53,8 @@ javac.classpath=\
     ${file.reference.java-mail-1.4.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
