--- a/VaccineManagementSystem/nbproject/project.properties
+++ b/VaccineManagementSystem/nbproject/project.properties
@@ -34,13 +34,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/VaccineManagementSystem
 excludes=
 file.reference.AbsoluteLayout.jar=E:\\Projects\\JAR_Files\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=/Users/bhargavi/Downloads/JAR_Files/AbsoluteLayout.jar
 file.reference.db4o-8.0.249.16098-all-java5.jar=E:\\Projects\\JAR_Files\\db4o-8.0.249.16098-all-java5.jar
+file.reference.db4o-8.0.249.16098-all-java5.jar-1=/Users/bhargavi/Downloads/JAR_Files/db4o-8.0.249.16098-all-java5.jar
 file.reference.db4o-java5-5.5.1.jar=C:\\Users\\jkkn7\\Downloads\\db4o-java5-5.5.1.jar
 file.reference.Downloads-jfreechart-1.5.2=C:\\Users\\jkkn7\\Downloads\\jfreechart-1.5.2
 file.reference.java-mail-1.4.jar=E:\\Projects\\JAR_Files\\java-mail-1.4.jar
+file.reference.java-mail-1.4.jar-1=/Users/bhargavi/Downloads/JAR_Files/java-mail-1.4.jar
 file.reference.jcommon-1.0.23.jar=E:\\Projects\\JAR_Files\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=/Users/bhargavi/Downloads/JAR_Files/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-swt.jar=E:\\Projects\\JAR_Files\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19-swt.jar-1=/Users/bhargavi/Downloads/JAR_Files/jfreechart-1.0.19-swt.jar
 file.reference.jfreechart-1.0.19.jar=E:\\Projects\\JAR_Files\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=/Users/bhargavi/Downloads/JAR_Files/jfreechart-1.0.19.jar
 file.reference.jfreechart-1.5.3.jar=C:\\Users\\jkkn7\\Downloads\\jfreechart-1.5.3.jar
 includes=**
 jar.compress=false
@@ -54,7 +60,13 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.db4o-8.0.249.16098-all-java5.jar-1}:\
+    ${file.reference.java-mail-1.4.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
