--- a/VaccineManagementSystem/nbproject/project.properties
+++ b/VaccineManagementSystem/nbproject/project.properties
@@ -100,7 +100,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=VaccineManagementSystem
-main.class=vaccinemanagementsystem.VaccineManagementSystem
+main.class=UI.MainLoginJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
